Update dictionary language file

--- a/src/Language_th.properties
+++ b/src/Language_th.properties
@@ -1,11 +1,19 @@
+# Language_th.properties is default dictionary for menu
+# TH or Thai Language
 
+connecting = กำลังเชื่อมต่อฐานข้อมูล
+load = กำลังโหลด...
 login = ลงชื่อเข้าใช้
 Cancel = ยกเลิก
 Username = ชื่อผู้ใช้
 Password = รหัสผ่าน
-Question_Detail = รายละเอียดผลงาน
+Question_Detail = รายละเอียดหัวข้อ
+Vote_Projects = ลงคะแนนเลือกผลงาน
 Project_Description = รายละเอียดผลงาน
 Choose_Project_Team = เลือกผลงาน
 summit = ส่ง
 exit = ออก
-Question: = หัวข้อ
+Question = หัวข้อ :
+Before_summit = กรุณาเลือกผลงานก่อนส่งผลโหวต
+You_voted = คุณโหวต
+vote_same = คุณได้เคยโหวตทีมนี้ในหัวข้อนี้ไปแล้ว
