--- a/src/Language_th.properties
+++ b/src/Language_th.properties
@@ -1,6 +1,10 @@
 # Language_th.properties is default dictionary for menu
 # TH or Thai Language
 
+textTitle = ยืนยันการออกโปรแกรม
+textMessage = ต้องการออกโปรแกรม?
+textYes = ใช่
+textNo = ไม่ใช่
 connecting = กำลังเชื่อมต่อฐานข้อมูล
 load = กำลังโหลด...
 login = ลงชื่อเข้าใช้
