--- a/src/Language_th.properties
+++ b/src/Language_th.properties
@@ -1,6 +1,8 @@
 # Language_th.properties is default dictionary for menu
 # TH or Thai Language
 
+success = ลงชื่อเข้าใช้สำเร็จ
+fail = ชื้อผู้ใช้ หรือ รหัสผ่าน ไม่ถูกต้อง
 textTitle = ยืนยันการออกโปรแกรม
 textMessage = ต้องการออกโปรแกรม?
 textYes = ใช่
