Update TH Language properties file

--- a/src/Language_th.properties
+++ b/src/Language_th.properties
@@ -3,8 +3,8 @@
 
 success = ลงชื่อเข้าใช้สำเร็จ
 fail = ชื้อผู้ใช้ หรือ รหัสผ่าน ไม่ถูกต้อง
-textTitle = ยืนยันการออกโปรแกรม
-textMessage = ต้องการออกโปรแกรม?
+textTitle = ต้องการออกโปรแกรม?
+textMessage = ยืนยันการออกโปรแกรม
 textYes = ใช่
 textNo = ไม่ใช่
 connecting = กำลังเชื่อมต่อฐานข้อมูล
