Update Language properties files

--- a/src/Language_th.properties
+++ b/src/Language_th.properties
@@ -20,6 +20,14 @@ Choose_Project_Team = เลือกผลงาน
 summit = ส่ง
 exit = ออก
 Question = หัวข้อ :
+Project = ผลงาน :
+ProjectName = ชื่อผลงาน
+TeamName = ชื่อทีม
+Set_Timing = เวลาในการโหวต
+Save = บันทึก
+UploadPic = อัพโหลดรูปภาพ
+Voting_Configuration = กำหนดค่ากาลโหวต
+Choose_Image = เลือกรูป
 Before_summit = กรุณาเลือกผลงานก่อนส่งผลโหวต
 You_voted = คุณโหวต
 vote_same = คุณได้เคยโหวตทีมนี้ในหัวข้อนี้ไปแล้ว
