Update language properties files

--- a/src/Language_th.properties
+++ b/src/Language_th.properties
@@ -31,3 +31,4 @@ Choose_Image = เลือกรูป
 Before_summit = กรุณาเลือกผลงานก่อนส่งผลโหวต
 You_voted = คุณโหวต
 vote_same = คุณได้เคยโหวตทีมนี้ในหัวข้อนี้ไปแล้ว
+Vote_Result = ผลการโหวต
