fix misspelling word

--- a/src/Language_th.properties
+++ b/src/Language_th.properties
@@ -26,7 +26,7 @@ TeamName = ชื่อทีม
 Set_Timing = เวลาในการโหวต
 Save = บันทึก
 UploadPic = อัพโหลดรูปภาพ
-Voting_Configuration = กำหนดค่ากาลโหวต
+Voting_Configuration = กำหนดค่าการโหวต
 Choose_Image = เลือกรูป
 Before_summit = กรุณาเลือกผลงานก่อนส่งผลโหวต
 You_voted = คุณโหวต
